--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,17 @@
   margin-top: 60px;
 }
 
+.pageContent{
+  display: flex;
+  justify-content: space-between;
+}
+
 .OSDViewer{
-  margin-left: 2%;
-  margin-top: 1%;
+  padding-left: 2%;
+  padding-top: 1%;
+  width: 70%;
+}
+
+.MenuSelection{
+  width: 30%;
 }
