Images can be selected from a local folder.

--- a/src/FromFolder/GetFromFolder.css
+++ b/src/FromFolder/GetFromFolder.css
@@ -1,4 +1,12 @@
 .ItemList{
     list-style-type: none;
     text-align: left;
+    padding-top: 3px;
+    margin-left: -10%;
 }
+
+.ItemList:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
