--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  margin-top: 60px;
+  margin-top: 50px;
 }
 
 .pageContent{
@@ -9,9 +9,9 @@
 }
 
 .OSDViewer{
-  padding-left: 2%;
+  padding-left: 1.5%;
   padding-top: 1%;
-  width: 70%;
+  width: 800px;
 }
 
 .MenuSelection{
