insert variables in preparation for the http request/response

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
 .buttonStart{
   width: 70%;
   margin-left: 15%;
+  margin-top: 15px;
   font-size: 18px;
   padding: 10px 10px 10px 10px;
   border: 2px solid #a7a7a7;
