change node version

--- a/src/Menu/selector.css
+++ b/src/Menu/selector.css
@@ -30,6 +30,7 @@
     border-left: solid black 1px;
     background-color: white;
     transition: 0.3s;
+    overflow: scroll;
 }
 
 .selectorBurgerTitle{
