adapt result for no xai

--- a/src/Result/Result.css
+++ b/src/Result/Result.css
@@ -28,7 +28,7 @@
 
 .contentResult{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin-bottom: -20px;
 }
 
