--- a/src/Result/Result.css
+++ b/src/Result/Result.css
@@ -14,23 +14,38 @@
     padding: 0;
 }
 
-.originalZone{
-    width: 23%;
-    padding: 1%;
-    margin:0;
-}
-
 .resultImg {
     width: 23%;
     padding: 1%;
     margin:0;
 }
 
+.test{
+    width: 100%;
+}
+
+.resultImgRCV {
+    width: 60%;
+    padding: 1%;
+    margin:0;
+}
+
+.resultPRCV {
+    width: 33%;
+    padding: 1%;
+    margin:0;
+}
+
+.resultPPredictionRCV {
+    padding: 0;
+    margin: 0;
+    width: 15%;
+}
+
 .resultP {
     padding: 0;
     margin: 0;
     width: 25%;
-
 }
 
 .resultText{
